cros: Fix stylus input for chrome --mus

* Ensure pen pointer events are serialized over mojo
* Ensure pen events are converted to TouchEvent before dispatch
  into views UI code, which is how classic ash handles pen events

Bug: 777561
Test: events_unittests, aura_unittests, manual test on device with stylus
Change-Id: Ifb4672682d63923b89d0749021b21ca0ed71b8a9
Reviewed-on: https://chromium-review.googlesource.com/736856
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511588}
Former-commit-id: ce371f4b2ec4c6e1472773d9edc869322e9d35b8